--- a/index.html
+++ b/index.html
@@ -1,110 +1,135 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-  <meta charset="UTF-8">
-  <title>盒中氣體壓力模擬</title>
+  <meta charset="UTF-8" />
+  <title>氣體壓力模擬 (V, N, T)</title>
   <style>
-    body { text-align: center; font-family: sans-serif; background: #f9f9f9; }
-    canvas { background: white; border: 2px solid black; display: block; margin: 10px auto; }
-    input { margin: 5px; }
+    body { font-family: sans-serif; text-align: center; background: #f4f4f9; }
+    canvas { border: 2px solid black; background: white; display: block; margin: 10px auto; }
+    .controls { width: 80%; margin: auto; text-align: left; }
+    .control { margin: 10px 0; }
+    label { display: inline-block; width: 80px; }
   </style>
 </head>
 <body>
-  <h2>盒中氣體壓力模擬</h2>
-  <div>
-    體積 V: <input id="vol" type="number" value="40000"> 
-    粒子數 n: <input id="num" type="number" value="30"> 
-    溫度 T: <input id="temp" type="number" value="300">
-    <button onclick="init()">開始模擬</button>
+  <h2>氣體壓力模擬</h2>
+  <div class="controls">
+    <div class="control">
+      <label>體積 V</label>
+      <input type="range" id="volume" min="200" max="600" value="400" />
+      <span id="volumeVal">400</span>
+    </div>
+    <div class="control">
+      <label>粒子數 N</label>
+      <input type="range" id="numParticles" min="10" max="200" value="50" />
+      <span id="numVal">50</span>
+    </div>
+    <div class="control">
+      <label>溫度 T</label>
+      <input type="range" id="temperature" min="50" max="500" value="200" />
+      <span id="tempVal">200</span>
+    </div>
   </div>
-  <canvas id="box" width="600" height="600"></canvas>
-  <p>模擬壓力 P = <span id="pressure">0</span> （模擬單位）</p>
+  <canvas id="box" width="400" height="400"></canvas>
+  <p>模擬壓力: <span id="pressure">0</span></p>
 
   <script>
     const canvas = document.getElementById("box");
     const ctx = canvas.getContext("2d");
 
+    const volumeSlider = document.getElementById("volume");
+    const numSlider = document.getElementById("numParticles");
+    const tempSlider = document.getElementById("temperature");
+
+    const volumeVal = document.getElementById("volumeVal");
+    const numVal = document.getElementById("numVal");
+    const tempVal = document.getElementById("tempVal");
+
+    const pressureDisplay = document.getElementById("pressure");
+
+    let boxSize = parseInt(volumeSlider.value);
     let particles = [];
-    let L, n, T, V;
-    let lastTime = Date.now();
-    let momentumSum = 0; 
-    let wallHits = 0;
+    let N = parseInt(numSlider.value);
+    let T = parseInt(tempSlider.value);
 
-    function init() {
-      V = parseFloat(document.getElementById("vol").value);
-      n = parseInt(document.getElementById("num").value);
-      T = parseFloat(document.getElementById("temp").value);
-
-      L = Math.sqrt(V); 
-      if (L > 600) L = 600; // 最大畫布限制
-
-      particles = [];
-      for (let i = 0; i < n; i++) {
-        let angle = Math.random() * 2 * Math.PI;
-        let speed = Math.sqrt(T) * (0.5 + Math.random()); // 跟 √T 成比例
-        particles.push({
-          x: Math.random() * L,
-          y: Math.random() * L,
-          vx: speed * Math.cos(angle),
-          vy: speed * Math.sin(angle),
-          r: 4
-        });
+    class Particle {
+      constructor(x, y, vx, vy) {
+        this.x = x;
+        this.y = y;
+        this.vx = vx;
+        this.vy = vy;
+        this.radius = 3;
       }
-      lastTime = Date.now();
-      momentumSum = 0;
-      wallHits = 0;
-      requestAnimationFrame(update);
-    }
-
-    function update() {
-      let now = Date.now();
-      let dt = (now - lastTime) / 1000; 
-      lastTime = now;
-
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      ctx.strokeRect(0, 0, L, L);
-
-      for (let p of particles) {
-        p.x += p.vx * dt * 50;
-        p.y += p.vy * dt * 50;
-
-        if (p.x < p.r) {
-          p.x = p.r; p.vx *= -1;
-          momentumSum += 2 * Math.abs(p.vx);
-          wallHits++;
+      move() {
+        this.x += this.vx;
+        this.y += this.vy;
+        if (this.x - this.radius < 0 || this.x + this.radius > boxSize) {
+          this.vx *= -1;
+          totalMomentum += 2 * Math.abs(this.vx);
         }
-        if (p.x > L - p.r) {
-          p.x = L - p.r; p.vx *= -1;
-          momentumSum += 2 * Math.abs(p.vx);
-          wallHits++;
+        if (this.y - this.radius < 0 || this.y + this.radius > boxSize) {
+          this.vy *= -1;
+          totalMomentum += 2 * Math.abs(this.vy);
         }
-        if (p.y < p.r) {
-          p.y = p.r; p.vy *= -1;
-          momentumSum += 2 * Math.abs(p.vy);
-          wallHits++;
-        }
-        if (p.y > L - p.r) {
-          p.y = L - p.r; p.vy *= -1;
-          momentumSum += 2 * Math.abs(p.vy);
-          wallHits++;
-        }
-
+      }
+      draw() {
         ctx.beginPath();
-        ctx.arc(p.x, p.y, p.r, 0, 2 * Math.PI);
+        ctx.arc(this.x, this.y, this.radius, 0, 2 * Math.PI);
         ctx.fillStyle = "blue";
         ctx.fill();
       }
-
-      if (wallHits > 0) {
-        let P = momentumSum / (4 * L * dt * wallHits);
-        document.getElementById("pressure").textContent = P.toFixed(3);
-        momentumSum = 0;
-        wallHits = 0;
-      }
-
-      requestAnimationFrame(update);
     }
+
+    function initParticles() {
+      particles = [];
+      for (let i = 0; i < N; i++) {
+        let speed = Math.sqrt(T) * (Math.random() * 0.5 + 0.5);
+        let angle = Math.random() * 2 * Math.PI;
+        let vx = speed * Math.cos(angle);
+        let vy = speed * Math.sin(angle);
+        particles.push(new Particle(Math.random() * boxSize, Math.random() * boxSize, vx, vy));
+      }
+    }
+
+    let totalMomentum = 0;
+    let lastTime = performance.now();
+
+    function loop() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      canvas.width = canvas.height = boxSize;
+      totalMomentum = 0;
+      particles.forEach(p => { p.move(); p.draw(); });
+
+      let now = performance.now();
+      let dt = (now - lastTime) / 1000; // 秒
+      lastTime = now;
+      let pressure = totalMomentum / (4 * boxSize * dt);
+      pressureDisplay.textContent = pressure.toFixed(2);
+
+      requestAnimationFrame(loop);
+    }
+
+    // slider事件
+    volumeSlider.oninput = () => {
+      boxSize = parseInt(volumeSlider.value);
+      volumeVal.textContent = boxSize;
+      initParticles();
+    };
+
+    numSlider.oninput = () => {
+      N = parseInt(numSlider.value);
+      numVal.textContent = N;
+      initParticles();
+    };
+
+    tempSlider.oninput = () => {
+      T = parseInt(tempSlider.value);
+      tempVal.textContent = T;
+      initParticles();
+    };
+
+    initParticles();
+    loop();
   </script>
 </body>
 </html>
-
