--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@ canvas { border: 2px solid #333; background: white; margin:10px; }
         <span id="tempVal">200</span>
       </label>
     </div>
+    <div class="slider-container">
+  <label>體積 V:
+    <input type="range" id="volumeSlider" min="200" max="800" value="500">
+    <span id="volumeVal">500</span>
+  </label>
+</div>
     <p>壓力 P: <span id="pressure">0</span></p>
     <canvas id="box" width="500" height="500"></canvas>
   </div>
