--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ function updateChart() {
 
   document.getElementById("info").innerHTML = 
     `平均速率 = ${avg.toFixed(2)} <br>
-     均方根速率 = ${rms.toFixed(2)} <br>
+     方均根速率 = ${rms.toFixed(2)} <br>
      最大速率 = ${max.toFixed(2)}`;
 }
 
