--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ let speedChart = new Chart(chartCtx, {
   data: {
     labels: [],
     datasets: [{
-      label: '速度分佈',
+      label: '速率分佈',
       data: [],
       borderColor: 'blue',
       fill: false,
